--- a/wally.toml
+++ b/wally.toml
@@ -1,10 +1,10 @@
 [package]
 name = "destruction-studios/state"
-version = "0.3.0"
+version = "0.5.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
-exclude = ["src/Tests", "TestEZ"]
+exclude = ["src/Tests", "TestEZ", "test.project.json"]
 
 [dependencies]
 Promise = "evaera/promise@4"
